--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -153,14 +153,53 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="h4f-HZ-TUe"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="MyShabon" image="shabon" id="2ra-eg-w6Y"/>
+                    <navigationItem key="navigationItem" title="MyShabon" id="udw-mv-ynE"/>
                     <connections>
                         <outlet property="myShabonTable" destination="MWU-qH-I2C" id="cvH-e6-uYZ"/>
+                        <segue destination="9Ng-XU-Eez" kind="push" identifier="myShabonDetailSegue" id="v7M-zm-1PM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qsm-AQ-XEm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2780" y="938.68065967016503"/>
+            <point key="canvasLocation" x="3719.1999999999998" y="938.68065967016503"/>
+        </scene>
+        <!--My Shabon Detail View Controller-->
+        <scene sceneID="8j9-6K-Bsa">
+            <objects>
+                <viewController id="9Ng-XU-Eez" customClass="MyShabonDetailViewController" customModule="Heart_up" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3tE-hc-PWZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0vV-FP-J7W">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wkv-lQ-Ris">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="0vV-FP-J7W" firstAttribute="leading" secondItem="oDL-OU-0CU" secondAttribute="leading" id="R2F-ap-3gR"/>
+                            <constraint firstItem="0vV-FP-J7W" firstAttribute="top" secondItem="oDL-OU-0CU" secondAttribute="top" id="gX0-Bj-8zp"/>
+                            <constraint firstItem="0vV-FP-J7W" firstAttribute="trailing" secondItem="oDL-OU-0CU" secondAttribute="trailing" id="mUl-Mp-17f"/>
+                            <constraint firstItem="0vV-FP-J7W" firstAttribute="bottom" secondItem="oDL-OU-0CU" secondAttribute="bottom" id="oG6-Qx-uaj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="oDL-OU-0CU"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="EgO-MW-Fkd"/>
+                    <connections>
+                        <outlet property="MyShabonDetailCollection" destination="0vV-FP-J7W" id="GGh-pq-j6Q"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HtW-W0-JhW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3724" y="1694.3028485757122"/>
         </scene>
         <!--comment-->
         <scene sceneID="L1a-aZ-6mv">
@@ -176,7 +215,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VXU-ge-Us0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3715" y="929"/>
+            <point key="canvasLocation" x="4653.6000000000004" y="928.78560719640188"/>
         </scene>
         <!--誰かの困りごと-->
         <scene sceneID="eXu-eX-PNt">
@@ -254,7 +293,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RvV-ha-3DT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4658" y="1024"/>
+            <point key="canvasLocation" x="5596" y="1023.2383808095952"/>
         </scene>
         <!--map-->
         <scene sceneID="MBt-TA-m4x">
@@ -287,7 +326,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="dDi-hv-esG" kind="relationship" relationship="viewControllers" id="Xba-Il-suU"/>
-                        <segue destination="1a5-qc-gGk" kind="relationship" relationship="viewControllers" id="7rP-Kj-ei7"/>
+                        <segue destination="Dh7-05-enF" kind="relationship" relationship="viewControllers" id="7rP-Kj-ei7"/>
                         <segue destination="jfO-mH-eiT" kind="relationship" relationship="viewControllers" id="5kh-oU-hgA"/>
                         <segue destination="NHf-Ic-d9i" kind="relationship" relationship="viewControllers" id="7c4-Tg-leh"/>
                     </connections>
@@ -311,6 +350,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fyd-5Q-Ok3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1806" y="921"/>
+        </scene>
+        <!--MyShabon-->
+        <scene sceneID="LHj-Ms-vYo">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dh7-05-enF" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="MyShabon" image="shabon" id="2ra-eg-w6Y"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3VR-e9-Xs0">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1a5-qc-gGk" kind="relationship" relationship="rootViewController" id="hCJ-uE-ro5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="12D-6y-Int" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2780" y="938.68065967016503"/>
         </scene>
     </scenes>
     <resources>
